front/src/shared/ui/sidebar/components/user-button/user-button.module.scss
.userButton {
	width: 60px;
	height: 60px;
	background-color: var(--hover);
	color: var(--text);
	border-radius: 5px;
	font-family: inherit;
	transition: all 0.2s ease;

	&:global(.collapsed) {
		width: 40px;
		height: 40px;
	}
}

.modalInner {
	width: 247px;
	position: relative;

	@media screen and (max-width: 768px) {
		width: 200px;
	}
}

.modalTitle {
	font-size: 22px;
	font-weight: 400;
	margin-bottom: 40px;

	@media screen and (max-width: 768px) {
		font-size: 20px;
		margin-bottom: 30px;
	}
}

.themeSwitcher {
	display: flex;
	align-items: center;
	justify-content: space-between;
	margin-bottom: 40px;

	> span {
		font-size: 16px;
		font-weight: 400;
	}

	@media screen and (max-width: 768px) {
		margin-bottom: 20px;
	}
}

.toggle {
	width: 30px;
	height: 16px;
	background-color: var(--theme-toggler-bg);
	border-radius: 10px;
	position: relative;
	cursor: pointer;
	transition: background-color 0.2s;

	&::before {
		content: '';
		position: absolute;
		height: 14px;
		width: 14px;
		background-color: var(--theme-toggler-circle);
		border-radius: 50%;
		top: 50%;
		right: 14px;
		transform: translateY(-50%);
		transition: right 0.2s;
	}

	&.active::before {
		right: 2px;
	}
}

.userInfo {
	display: flex;
	align-items: center;
	justify-content: space-between;
	margin-bottom: 40px;

	@media screen and (max-width: 768px) {
		margin-bottom: 20px;
	}
}

.userEmail {
	display: block;
	font-size: 20px;
	font-weight: 400;
	margin: 0 auto 40px auto;
	text-align: center;

	@media screen and (max-width: 768px) {
		font-size: 16px;
	}
}

.saveButton {
	font-size: 18px;
	font-weight: 400;
	color: var(--save-button-text);
	padding: 4px;
	background-color: var(--save-button-bg);
	border-radius: 10px;
	display: inline-block;
	width: 100%;
	font-family: inherit;
	transition: background-color 0.2s;

	&:hover {
		background-color: #aaa;
	}

	@media screen and (max-width: 768px) {
		font-size: 16px;
	}
}

.signOutButton {
	position: absolute;
	right: -10px;
	top: -10px;
	width: 25px;
	height: 25px;

	> svg circle {
		fill: var(--close-button-bg);
		transition: all 0.2s;
	}

	> svg path {
		fill: var(--close-button-fill);
	}

	&:hover {
		> svg circle {
			fill: var(--hover);
		}
	}

	@media screen and (max-width: 768px) {
		width: 20px;
		height: 20px;
		right: -5px;
		top: -5px;
	}
}

